Almost-working prototype